--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <body>
         <h1>This is header</h1>
         <p> this is a paragraph</p>
+        <p>This is a second paragraph</p>
     </body>
 </html>
