--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
         <h1>This is header</h1>
         <p> this is a paragraph</p>
         <p>This is a second paragraph</p>
+        <p>this is the third paragraph</p>
     </body>
 </html>
